# gospin

./: .gitignore  Build.rs  Cargo.toml  LICENSE  README.md  build.rs
go_boilerplate/: .air.toml  .dockerignore  .env  .prod.env  Dockerfile  Makefile  _.gitignore  docker-compose.yml  go.mod  go.sum  sqlc.yml
go_boilerplate/.github/workflows/: cd.yml  ci.yml
go_boilerplate/_.github/workflows/: cd.yml  ci.yml  dependabot.yml
go_boilerplate/client/: package-lock.json  package.json  pwa-assets.config.ts  tsconfig.json  vite.config.ts
go_boilerplate/client/src/: index.ts
go_boilerplate/cmd/boot/: config.go
go_boilerplate/cmd/server/: main.go  router.go
go_boilerplate/internal/api/: cats.go  get.go
go_boilerplate/internal/apperrors/: errors.go  errors_test.go
go_boilerplate/internal/config/: manifest.go  site.go
go_boilerplate/internal/connections/: client.go  connection.go  event.go
go_boilerplate/internal/controllers/: examples.go  index.go
go_boilerplate/internal/database/: db.go  utility.go
go_boilerplate/internal/enums/: box.go  box_test.go  environments.go  environments_test.go
go_boilerplate/internal/helpers/: error_test.go  errors.go  formatting.go  formatting_test.go  fp.go  fp_test.go  generators_test.go  notify.go  page.go  page_test.go  (+4 more)
go_boilerplate/scripts/: pentest.sh
go_boilerplate/sql/: init.sql
go_boilerplate/views/: 404.templ  404_templ.go  500.templ  500_templ.go  error.templ  error_templ.go  examples.templ  examples_templ.go  index.templ  index_templ.go
src/: cli.rs  errors.rs  main.rs  models.rs  scaffolder.rs
(+71 files in other folders)
