[package]
name = "gospin"
version = "0.1.1"
authors = ["Francesco Michele Barranca kalairendev@francescobarranca.dev"]
license = "BSD-3-Clause"
description = "A cli tool to create a boilerplate project GO + HTMX"
readme = "README.md"
homepage = "https://github.com/Francesco99975/gospin"
repository = "https://github.com/Francesco99975/gospin"
keywords = ["cli", "go", "htmx", "tools", "server"]
categories = ["command-line-utilities"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
